--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,13 @@
         android:theme="@style/Theme.Search_Movie_Flow"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name=".BaseActivity"
+            android:exported="false" />
+        <activity
+            android:name=".RecentSearchActivity"
+            android:exported="false" />
+        <activity
+            android:name=".presentation.SearchMovieActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
