--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,21 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    package="com.search_movie_flow">
+
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
+        android:name=".SearchMovieApp"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
+        android:exported="true"
         android:theme="@style/Theme.Search_Movie_Flow"
         tools:targetApi="31">
+
         <activity
-            android:name=".BaseActivity"
-            android:exported="false" />
-        <activity
-            android:name=".RecentSearchActivity"
+            android:name=".presentation.RecentSearchActivity"
             android:exported="false" />
         <activity
             android:name=".presentation.SearchMovieActivity"
