[FEAT] webview end

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,14 +9,17 @@
         android:name=".SearchMovieApp"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
+        android:exported="true"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:exported="true"
         android:theme="@style/Theme.Search_Movie_Flow"
+        android:usesCleartextTraffic="true"
         tools:targetApi="31">
-
+        <activity
+            android:name=".presentation.WebViewActivity"
+            android:exported="false" />
         <activity
             android:name=".presentation.RecentSearchActivity"
             android:exported="false" />
